# Structured-Memory-R1

./: .gitignore  MEMORY_R1_README.md  README.md  nebius_train_memory_r1.sh  plot_training.py  pyproject.toml  requirements.txt  setup.py  smoke_struct_memory_r1_retriever.py  train_answer_agent.sh  train_memory_manager.sh  train_struct_memory_manager_smoke.sh  train_struct_memory_r1_retriever_smoke.sh
backbone/: README.md
backbone/scripts/: train_grpo_1gpu.sh
checkpoints/: README.md
figures/: struct_memory_r1_figure.html
legacy/: README.md
legacy/legacy_search_r1_scripts/: plot_training_logs.py
legacy/struct_memory_r1_retriever/: llm_extract.py  memory_bank.py  prompts.py
log/: memory-r1-answer-agent-grpo-qwen-qwen2.5-3b-instruct_progress.txt  memory-r1-manager-grpo-qwen-qwen2.5-3b-instruct_progress.txt  stage1_checkpoint.txt
memory_r1/: README.md  memory_bank.py  prompts.py
memory_r1/agents/: memory_manager.py
memory_r1/data/: build_training_data.py  locomo_loader.py
memory_r1/docs/: MEMORY_R1_ARCHITECTURE.md  MEMORY_R1_README.md
memory_r1/retrieval/: memory_server.py
memory_r1/reward/: em_reward.py
memory_r1/scripts/: nebius_train.sh  train_memory_manager_smoke.sh
memory_r1/tests/: test_data.py  test_memory_bank.py  test_prompts.py  test_reward.py  test_verl_integration.py
scripts/: vm_setup.sh
search_r1/search/: simple_retrieval_server.py
struct_memory_r1/: README.md  memory_bank.py  prompts.py
struct_memory_r1/agents/: retrieve_agent.py
struct_memory_r1/data/: locomo_loader.py  (+1 more)
struct_memory_r1_retriever/: __init__.py
structured_locomo_trees/: conv-26.xml  conv-30.xml  conv-41.xml  conv-42.xml  conv-43.xml  conv-44.xml  conv-47.xml  conv-48.xml  conv-49.xml  conv-50.xml  locomo10.json
(+22 files in other folders)
