# -------------------------------
# build-system
# -------------------------------
[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

# -------------------------------
# project (PEP 621 metadata)
# -------------------------------
[project]
name = "struct-memory-r1"
version = "0.1.0"

description = "StructMemoryR1: Tree-Structured Memory Augmentation for Long-Term Dialogue QA via Reinforcement Learning"
license = {file = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"

# Core dependencies
dependencies = [
    "accelerate",
    "codetiming",
    "datasets",
    "dill",
    "fastapi",
    "hydra-core",
    "numpy",
    "pybind11",
    "ray",
    "requests",
    "scikit-learn",
    "tensordict",
    "transformers<4.48",
    "uvicorn",
    "vllm<=0.6.3",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "yapf",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "yapf",
    "black",
    "ruff",
]

[project.urls]
Repository = "https://anonymous.4open.science/r/struct-memory-r1"

# -------------------------------
# tool.setuptools
# -------------------------------
[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
where = ["."]
include = [
    "struct_memory_r1*",
    "memory_r1*",
    "verl*",
    "search_r1*",
]
exclude = ["legacy*", "tests*"]

[tool.setuptools.package-data]
verl = [
    "version/*",
    "trainer/config/*.yaml",
]
struct_memory_r1 = ["**/*.json", "**/*.yaml"]
memory_r1 = ["**/*.json", "**/*.yaml"]
